Added Video Walkthrough to the ReadMe file

--- a/site/index.html
+++ b/site/index.html
@@ -25,13 +25,13 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Someone else</h3>
+                <h3>Angela Manager</h3>
                 <h4>Manager</h4><i class="material-icons">local_cafe</i>
             </div>
             <div class="card-body">
                 <p class="id">ID: 1</p>
-                <p class="email">Email: <a href="mailto:someoneelse@gmail.com">someoneelse@gmail.com</a></p>
-                <p class="office">Office Number: 15</p>
+                <p class="email">Email: <a href="mailto:amanager@test.com">amanager@test.com</a></p>
+                <p class="office">Office Number: 13</p>
             </div>
         </div>
     </div>
@@ -39,13 +39,13 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Engineer1</h3>
+                <h3>Joseph Spann</h3>
                 <h4>Engineer</h4><i class="material-icons">devices</i>
             </div>
             <div class="card-body">
-                <p class="id">ID: 3</p>
-                <p class="email">Email: <a href="mailto:engineer1@aol.com">engineer1@aol.com</a></p>
-                <p class="github">Github: <a href="https://github.com/engineer1" target= "_blank">engineer1</a></p>
+                <p class="id">ID: 2</p>
+                <p class="email">Email: <a href="mailto:joespann91@gmail.com">joespann91@gmail.com</a></p>
+                <p class="github">Github: <a href="https://github.com/jpspann91" target= "_blank">jpspann91</a></p>
             </div>
         </div>
     </div>
@@ -53,13 +53,41 @@
     <div class="col-4 mt-4">
         <div class="card h-100">
             <div class="card-header">
-                <h3>Intern1</h3>
+                <h3>Jessica Intern</h3>
                 <h4>Intern</h4><i class="material-icons">help</i>
             </div>
             <div class="card-body">
-                <p class="id">ID: 4</p>
-                <p class="email">Email:<a href="mailto:intern1@hotmail.com">intern1@hotmail.com</a></p>
+                <p class="id">ID: 3</p>
+                <p class="email">Email:<a href="mailto:jintern@test.com">jintern@test.com</a></p>
                 <p class="school">School: SDSU</p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-4 mt-4">
+        <div class="card h-100">
+            <div class="card-header">
+                <h3>Michael Spann</h3>
+                <h4>Engineer</h4><i class="material-icons">devices</i>
+            </div>
+            <div class="card-body">
+                <p class="id">ID: 4</p>
+                <p class="email">Email: <a href="mailto:mspann@test.com">mspann@test.com</a></p>
+                <p class="github">Github: <a href="https://github.com/mspann91" target= "_blank">mspann91</a></p>
+            </div>
+        </div>
+    </div>
+    
+    <div class="col-4 mt-4">
+        <div class="card h-100">
+            <div class="card-header">
+                <h3>Diane Intern</h3>
+                <h4>Intern</h4><i class="material-icons">help</i>
+            </div>
+            <div class="card-body">
+                <p class="id">ID: 5</p>
+                <p class="email">Email:<a href="mailto:dintern@test.com">dintern@test.com</a></p>
+                <p class="school">School: UCSD</p>
             </div>
         </div>
     </div>
